# WEBPROJ

./: .dockerignore  Dockerfile  README.md  environment-dev.yaml  environment.yaml  pyproject.toml
.github/workflows/: tests.yml
scripts/: compare_apis.py
src/app/: main.py
src/webproj/: api.py
tests/: test_api.py
webproj/: api.py
